TEST_PROGRAMS/INVALID/Olivier_Melancon/zero_division.min
var n: float;

n = 10.;
n = n / 00.

# You can only divide by one zero, not two
